[🚧] completed Nav and Routing logic in ReasonReact

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,6 @@
 {
   "name": "reason-scripts",
-  "sources": ["src"],
+  "sources": ["src", "src/components", "src/pages"],
   "bs-dependencies": ["reason-react", "@glennsl/bs-jest"],
   "reason": {
     "react-jsx": 2
